# unet_ort_infer

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  output.txt  test.cpp  test.h
